fixed visible link underline when scrolling downward

--- a/src/styles/components/_navBarLinks.scss
+++ b/src/styles/components/_navBarLinks.scss
@@ -41,7 +41,7 @@
 			&::after {
 				content: "";
 				position: absolute;
-				bottom: -2px;
+				bottom: 1%;
 				left: 0;
 				width: 0%;
 				height: 2px;
